update and clean up site formatting

--- a/archives.html
+++ b/archives.html
@@ -38,8 +38,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -70,10 +70,9 @@
 <article id="main">
 
     <header class="special container">
-        <span class="icon fa-pencil"></span>
+        <span class="icon fa-archive"></span>
         <h2>Archives</h2>
         <!-- add page sub title here -->
-        <p>Archives Template</p>
     </header>
 
     <!-- One -->
@@ -128,114 +127,32 @@
                         </header>
                         <p>My parents have been here for the last couple of weeks. It's nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The house feels like a home... There's an interesting Woody Allen …</p>
                     </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/the-facebook-experiment">
-                                <h3>The Facebook Experiment</h3>
-                            </a>
-                        </header>
-                        <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/to-like-or-not-to-like">
-                                <h3>To Like or Not to Like...</h3>
-                            </a>
-                        </header>
-                        <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/the-power-of-stories">
-                                <h3>The Power of Stories...</h3>
-                            </a>
-                        </header>
-                        <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/i-want-to-talk-to-you">
-                                <h3>I Want to Talk to You...</h3>
-                            </a>
-                        </header>
-                        <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/book-review-the-source-james-michener">
-                                <h3>Book Review: The Source by James A. Michener</h3>
-                            </a>
-                        </header>
-                        <p>The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/nuclear-power">
-                                <h3>Nuclear Power</h3>
-                            </a>
-                        </header>
-                        <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/this-way-and-that">
-                                <h3>This way and That...</h3>
-                            </a>
-                        </header>
-                        <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/book-review-king-queen-knave-nabokov">
-                                <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
-                            </a>
-                        </header>
-                        <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/reasonable">
-                                <h3>Reasonable...</h3>
-                            </a>
-                        </header>
-                        <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had a long way to go - many responsibilities to fulfil. Keeping fit was the reasonable thing to …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/love-because">
-                                <h3>Because</h3>
-                            </a>
-                        </header>
-                        <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/being-ok">
-                                <h3>Being OK</h3>
-                            </a>
-                        </header>
-                        <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
-                    </section>
-                    <section>
-                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
-                        <header>
-                            <a href="/posts/jump">
-                                <h3>Jump!</h3>
-                            </a>
-                        </header>
-                        <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea of a trip to Mandvi beach was therefore exciting (as all trips to …</p>
-                    </section>
+ 
+<div class="row ">
+
+    <div class="4u pagination-left">
+        <section>
+            <header>
+ &nbsp;             </header>
+        </section>
+    </div>
+
+    <div class="4u pagination-middle">
+        <section>
+            <header>Page 1 / 4</header>
+        </section>
+    </div>
+
+    <div class="4u pagination-right">
+        <section>
+            <header>
+                <a href="/archives2.html">Older posts&nbsp;&rarr;</a>             </header>
+        </section>
+    </div>
+
+</div>
+
+
                 </div>
             </div>
 
@@ -246,27 +163,142 @@
                 <div class="sidebar">
                     <section>
                         <header>
-                            <h3>Magna Feugiat</h3>
+                            <h3>All Tags</h3>
                         </header>
-                        <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit..</p>
-                        <footer>
-                            <ul class="buttons">
-                                <li><a href="#" class="button small">Learn More</a></li>
-                            </ul>
-                        </footer>
-                    </section>
+<ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/adhd">
+            adhd
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/beginning">
+            beginning
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/book">
+            book
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/conversations">
+            conversations
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/conversations-with-myself">
+            conversations with myself
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/depression">
+            depression
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/diary">
+            diary
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/disappointment">
+            disappointment
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/experiment">
+            experiment
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/facebook">
+            facebook
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/feelings">
+            feelings
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-1 list-group-item">
+        <a href="/tag/life">
+            life
+                    <span class="badge">(7)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/love">
+            love
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/musings">
+            musings
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/personal">
+            personal
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/relationships">
+            relationships
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/review">
+            review
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/self">
+            self
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/technology">
+            technology
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/writing-experiment">
+            writing experiment
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+</ul>                    </section>
 
                     <section>
-                        <a href="#" class="image feature"><img src="images/pic04.jpg" alt="" /></a>
                         <header>
-                            <h3>Amet Lorem Tempus</h3>
+                            <h3>All Categories</h3>
                         </header>
-                        <p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-                        <footer>
-                            <ul class="buttons">
-                                <li><a href="#" class="button small">Learn More</a></li>
-                            </ul>
-                        </footer>
+                        <ul>
+                            <li><a href="/category/conversations-with-myself">Conversations with myself</a></li>
+                            <li><a href="/category/personal">Personal</a></li>
+                            <li><a href="/category/reviews">Reviews</a></li>
+                            <li><a href="/category/scribbles">Scribbles</a></li>
+                            <li><a href="/category/technology">Technology</a></li>
+                        </ul>
                     </section>
                 </div>
 
@@ -285,25 +317,24 @@
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Look at my work</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
 </section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
