--- a/index3.html
+++ b/index3.html
@@ -67,8 +67,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -117,19 +117,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Oooh Shiny!</strong></h2>
+                <h2>Featured - <strong>Book Review: King, Queen, Knave by Vladimir Nabokov</strong></h2>
             </header>
-            <p>&#34;Hello again.&#34; &#34;Hello to you, too!&#34; &#34;What&#39;s on your mind today?&#34; &#34;On my mind? Nothing. That&#39;s kinda the weird thing - I think I am losing my ability to think.&#34; &#34;You thin</p>
+            <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Koro</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/oooh-shiny" class="button">Read More</a></li>
+                    <li><a href="/posts/book-review-king-queen-knave-nabokov" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-comments"><span class="label">Oooh Shiny!</span></span>
+                <li><span class="icon fa-book"><span class="label">Book Review: King, Queen, Knave by Vladimir Nabokov</span></span>
                 </li>
             </ul>
         </div>
@@ -206,9 +206,8 @@
     <div class="4u pagination-left">
         <section>
             <header>
-                    <a href="/index2.html">
-                &larr;&nbsp;Newer posts</a>
-            </header>
+                     <a href="/index2.html">
+                &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
 
@@ -221,8 +220,7 @@
     <div class="4u pagination-right">
         <section>
             <header>
-                <a href="/index4.html">Older posts&nbsp;&rarr;</a>
-            </header>
+                <a href="/index4.html">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -243,25 +241,24 @@
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Look at my work</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
 </section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
