--- a/index6.html
+++ b/index6.html
@@ -67,8 +67,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -117,19 +117,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Jump!</strong></h2>
+                <h2>Featured - <strong>We all Need the Eggs...</strong></h2>
             </header>
-            <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I&#39;m the ant who is caught under His magnifying glass. The idea of a</p>
+            <p>My parents have been here for the last couple of weeks. It&#39;s nice to see them after about a year. Not because there is so much to talk about but even in silence, there is a sense of belonging. The</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/jump" class="button">Read More</a></li>
+                    <li><a href="/posts/we-all-need-the-eggs" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-smile-o"><span class="label">Jump!</span></span>
+                <li><span class="icon fa-smile-o"><span class="label">We all Need the Eggs...</span></span>
                 </li>
             </ul>
         </div>
@@ -188,9 +188,8 @@
     <div class="4u pagination-left">
         <section>
             <header>
-                    <a href="/index5.html">
-                &larr;&nbsp;Newer posts</a>
-            </header>
+                     <a href="/index5.html">
+                &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
 
@@ -224,25 +223,24 @@
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Look at my work</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
 </section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
