--- a/tags.html
+++ b/tags.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
-     <title>Pawanraj Sadhwani - Tags</title>
+     <title>Tags | Pawanraj Sadhwani </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"> </head>
 
@@ -38,8 +38,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -66,62 +66,236 @@
         </nav>
     </header>
 
-    <h1>Tags for Pawanraj Sadhwani</h1>
-    <ul>
-        <li><a href="/tag/adhd">adhd</a> (1)</li>
-        <li><a href="/tag/amusing">amusing</a> (1)</li>
-        <li><a href="/tag/beginning">beginning</a> (1)</li>
-        <li><a href="/tag/book">book</a> (2)</li>
-        <li><a href="/tag/book-review">book review</a> (1)</li>
-        <li><a href="/tag/connections">connections</a> (1)</li>
-        <li><a href="/tag/conversations">conversations</a> (2)</li>
-        <li><a href="/tag/conversations-with-myself">conversations with myself</a> (2)</li>
-        <li><a href="/tag/coping">coping</a> (1)</li>
-        <li><a href="/tag/depression">depression</a> (1)</li>
-        <li><a href="/tag/diary">diary</a> (2)</li>
-        <li><a href="/tag/disappointment">disappointment</a> (3)</li>
-        <li><a href="/tag/experiment">experiment</a> (1)</li>
-        <li><a href="/tag/facebook">facebook</a> (2)</li>
-        <li><a href="/tag/family">family</a> (1)</li>
-        <li><a href="/tag/feelings">feelings</a> (1)</li>
-        <li><a href="/tag/gratitude">gratitude</a> (1)</li>
-        <li><a href="/tag/happiness">happiness</a> (1)</li>
-        <li><a href="/tag/king-queen-knave">king queen knave</a> (1)</li>
-        <li><a href="/tag/life">life</a> (7)</li>
-        <li><a href="/tag/like">like</a> (1)</li>
-        <li><a href="/tag/love">love</a> (2)</li>
-        <li><a href="/tag/michener">michener</a> (1)</li>
-        <li><a href="/tag/musing">musing</a> (1)</li>
-        <li><a href="/tag/musings">musings</a> (3)</li>
-        <li><a href="/tag/nabokov">nabokov</a> (1)</li>
-        <li><a href="/tag/nonsense">nonsense</a> (1)</li>
-        <li><a href="/tag/parents">parents</a> (1)</li>
-        <li><a href="/tag/personal">personal</a> (2)</li>
-        <li><a href="/tag/philosoraptor">philosoraptor</a> (1)</li>
-        <li><a href="/tag/relationships">relationships</a> (2)</li>
-        <li><a href="/tag/review">review</a> (2)</li>
-        <li><a href="/tag/scribble">scribble</a> (1)</li>
-        <li><a href="/tag/self">self</a> (2)</li>
-        <li><a href="/tag/stories">stories</a> (1)</li>
-        <li><a href="/tag/story">story</a> (1)</li>
-        <li><a href="/tag/technology">technology</a> (2)</li>
-        <li><a href="/tag/writing-experiment">writing experiment</a> (2)</li>
-    </ul>
- <!-- Footer -->
+
+<!-- Main -->
+<article id="main">
+
+    <header class="special container">
+        <span class="icon fa-tags"></span>
+        <h2>All Tags</h2>
+        <!-- add page sub title here -->
+    </header>
+
+    <!-- One -->
+    <section class="wrapper style4 container">
+
+        <!-- Content -->
+        <div class="content">
+            <section>
+<ul class="tagcloud">
+    <li class="tag-4 list-group-item">
+        <a href="/tag/adhd">
+            adhd
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/beginning">
+            beginning
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/book">
+            book
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/conversations">
+            conversations
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/conversations-with-myself">
+            conversations with myself
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/depression">
+            depression
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/diary">
+            diary
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/disappointment">
+            disappointment
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/experiment">
+            experiment
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/facebook">
+            facebook
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-4 list-group-item">
+        <a href="/tag/feelings">
+            feelings
+                    <span class="badge">(1)</span>
+            </a>
+    </li>
+    <li class="tag-1 list-group-item">
+        <a href="/tag/life">
+            life
+                    <span class="badge">(7)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/love">
+            love
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/musings">
+            musings
+                    <span class="badge">(3)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/personal">
+            personal
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/relationships">
+            relationships
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/review">
+            review
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/self">
+            self
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/technology">
+            technology
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+    <li class="tag-2 list-group-item">
+        <a href="/tag/writing-experiment">
+            writing experiment
+                    <span class="badge">(2)</span>
+            </a>
+    </li>
+</ul>            </section>
+        </div>
+
+    </section>
+
+    <!-- Two -->
+<section class="wrapper style1 container special">
+    <h3>Recent Posts</h3>
+    <div class="row">
+        <div class="4u">
+
+            <section>
+                <span class="icon feature fa-comments"></span>
+                <header>
+                    <a href="/posts/oooh-shiny" rel='bookmark'>
+                        <h3>Oooh Shiny!</h3>
+                    </a>
+                </header>
+                <p>"Hello again." "Hello to you, too!" "What's on your mind today?" "On my mind? Nothing. That's kinda the weird thing - I think I am losing my ability to think." "You</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="/posts/oooh-shiny" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
+        <div class="4u">
+
+            <section>
+                <span class="icon feature fa-comments"></span>
+                <header>
+                    <a href="/posts/so-it-begins" rel='bookmark'>
+                        <h3>So it begins...</h3>
+                    </a>
+                </header>
+                <p>"So..." "So." "You started this on 16th December. It is now 21st December..." "Yes, and?" "Nothing. Just pointing it out." "Yes, thanks. I am aware that I've</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="/posts/so-it-begins" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
+        <div class="4u">
+
+            <section>
+                <span class="icon feature fa-frown-o"></span>
+                <header>
+                    <a href="/posts/not-today" rel='bookmark'>
+                        <h3>Not Today</h3>
+                    </a>
+                </header>
+                <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
+                <footer>
+                    <ul class="buttons">
+                        <li><a href="/posts/not-today" class="button small">Read More</a></li>
+                    </ul>
+                </footer>
+            </section>
+
+        </div>
+    </div>
+</section>
+</article>
+<!-- CTA -->
+<section id="cta">
+
+    <header>
+        <h2>Let's work <strong>Together!</strong></h2>
+    </header>
+    <footer>
+        <ul class="buttons">
+            <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
+        </ul>
+    </footer>
+
+</section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
