--- a/archives2.html
+++ b/archives2.html
@@ -22,11 +22,11 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
-     <title>experiment | Pawanraj Sadhwani </title>
+     <title>Archives | Pawanraj Sadhwani </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"> </head>
 
-<body class="no-sidebar loading">
+<body class="right-sidebar loading">
 
 
 
@@ -70,8 +70,8 @@
 <article id="main">
 
     <header class="special container">
-        <span class="icon fa-tag"></span>
-        <h2><i class="fa fa-tag" aria-hidden="true"></i>experiment</h2>
+        <span class="icon fa-archive"></span>
+        <h2>Archives</h2>
         <!-- add page sub title here -->
     </header>
 
@@ -85,12 +85,75 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/not-today">
-                                <h3>Not Today</h3>
+                            <a href="/posts/the-facebook-experiment">
+                                <h3>The Facebook Experiment</h3>
                             </a>
                         </header>
-                        <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
+                        <p>An interesting tidbit about Facebook was in the news recently. Apparently, Facebook played around with newsfeeds to make them more positive / negative. They were trying to determine if mood of the timeline affects the mood of the user. Evidently it does. Predictably, the pitchforks have come out at the supposed …</p>
                     </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/to-like-or-not-to-like">
+                                <h3>To Like or Not to Like...</h3>
+                            </a>
+                        </header>
+                        <p>I've been getting back on to social media after a fairly long hiatus. And most social media services have changed a little bit in that time. What hasn't changed however, is how stuff get's shared around these places. Google has +1, Tumblr has "reblogging", Twitter has "retweet" and Facebook has …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/the-power-of-stories">
+                                <h3>The Power of Stories...</h3>
+                            </a>
+                        </header>
+                        <p>I have been reading The Story Bible by Pearl Buck. It is The Bible, but without (most of) the "religious stuff". What it does is recount the stories in the Bible in short 10-12 page chapters. And as I read, I realize that as a story, the Bible is quite …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/i-want-to-talk-to-you">
+                                <h3>I Want to Talk to You...</h3>
+                            </a>
+                        </header>
+                        <p>I want to talk to you. But I can't. I can't. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - of thoughts - of understanding, flowing down into the valley that now …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/book-review-the-source-james-michener">
+                                <h3>Book Review: The Source by James A. Michener</h3>
+                            </a>
+                        </header>
+                        <p>The Source by James A. Michener Uses the background of an archaeological dig, to chronicle the rise of religion (specifically Judaism) from prehistory (30000 yrs ago), to the modern state of Israel (till 1960s, when the book was written). Defines the relationship of Judaism, with other derivative religions - Christianity and …</p>
+                    </section>
+ 
+<div class="row ">
+
+    <div class="4u pagination-left">
+        <section>
+            <header>
+                 <a href="/archives.html">
+                &larr;&nbsp;Newer posts</a>             </header>
+        </section>
+    </div>
+
+    <div class="4u pagination-middle">
+        <section>
+            <header>Page 2 / 4</header>
+        </section>
+    </div>
+
+    <div class="4u pagination-right">
+        <section>
+            <header>
+                <a href="/archives3.html">Older posts&nbsp;&rarr;</a>             </header>
+        </section>
+    </div>
+
+</div>
+
+
                 </div>
             </div>
 
@@ -239,61 +302,13 @@
                         </ul>
                     </section>
                 </div>
+
             </div>
 
         </div>
-
-<div class="row ">
-
-    <div class="4u pagination-left">
-        <section>
-            <header>
- &nbsp;             </header>
-        </section>
-    </div>
-
-    <div class="4u pagination-middle">
-        <section>
-            <header>Page 1 / 1</header>
-        </section>
-    </div>
-
-    <div class="4u pagination-right">
-        <section>
-            <header>
-            </header>
-        </section>
-    </div>
-
-</div>
-
     </section>
-
-    <!-- Two -->
-<section class="wrapper style1 container special">
-    <h3>Recent Posts</h3>
-    <div class="row">
-        <div class="4u">
-
-            <section>
-                <span class="icon feature fa-frown-o"></span>
-                <header>
-                    <a href="/posts/not-today" rel='bookmark'>
-                        <h3>Not Today</h3>
-                    </a>
-                </header>
-                <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="/posts/not-today" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-    </div>
-</section>
 </article>
+
 <!-- CTA -->
 <section id="cta">
 
