--- a/archives3.html
+++ b/archives3.html
@@ -22,11 +22,11 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
-     <title>experiment | Pawanraj Sadhwani </title>
+     <title>Archives | Pawanraj Sadhwani </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"> </head>
 
-<body class="no-sidebar loading">
+<body class="right-sidebar loading">
 
 
 
@@ -70,8 +70,8 @@
 <article id="main">
 
     <header class="special container">
-        <span class="icon fa-tag"></span>
-        <h2><i class="fa fa-tag" aria-hidden="true"></i>experiment</h2>
+        <span class="icon fa-archive"></span>
+        <h2>Archives</h2>
         <!-- add page sub title here -->
     </header>
 
@@ -85,12 +85,75 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/not-today">
-                                <h3>Not Today</h3>
+                            <a href="/posts/nuclear-power">
+                                <h3>Nuclear Power</h3>
                             </a>
                         </header>
-                        <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
+                        <p>In the beginning there was just, the word... And then came science... And then someone discovered radioactivity. Everyone found this interesting... Others extended the concept and discovered fission... Then things became really interesting... That was the advent of nuclear energy... Now there was a set of people who thought nuclear …</p>
                     </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/this-way-and-that">
+                                <h3>This way and That...</h3>
+                            </a>
+                        </header>
+                        <p>So, imagine this. You're walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direction you're walking in. And then you see a vehicle coming at you …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/book-review-king-queen-knave-nabokov">
+                                <h3>Book Review: King, Queen, Knave by Vladimir Nabokov</h3>
+                            </a>
+                        </header>
+                        <p>King, Queen, Knave (Amazon) is a Vladimir Nabokov novel, originally written in Russian (Korol', dama, valet), and later translated (and modified quite some bit) in English by Nabokov himself, with help from his son. The story is a love-triangle set in Berlin. Franz, a village bumpkin, goes to Berlin to …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/reasonable">
+                                <h3>Reasonable...</h3>
+                            </a>
+                        </header>
+                        <p>His feet pounded the pavement. And thoughts pounded away at his head. Age and stress had caught up with him, and exercise had been advised. So, he had started running. After all, he had a long way to go - many responsibilities to fulfil. Keeping fit was the reasonable thing to …</p>
+                    </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/love-because">
+                                <h3>Because</h3>
+                            </a>
+                        </header>
+                        <p>"I love you." She said what she always did, before she hung up. Today, he paused, and cast his mind back to the last time he asked her the question that was now poised on the tip of his tongue. "Why?" He thought. There was nothing to suggest he was …</p>
+                    </section>
+ 
+<div class="row ">
+
+    <div class="4u pagination-left">
+        <section>
+            <header>
+                     <a href="/archives2.html">
+                &larr;&nbsp;Newer posts</a>             </header>
+        </section>
+    </div>
+
+    <div class="4u pagination-middle">
+        <section>
+            <header>Page 3 / 4</header>
+        </section>
+    </div>
+
+    <div class="4u pagination-right">
+        <section>
+            <header>
+                <a href="/archives4.html">Older posts&nbsp;&rarr;</a>             </header>
+        </section>
+    </div>
+
+</div>
+
+
                 </div>
             </div>
 
@@ -239,61 +302,13 @@
                         </ul>
                     </section>
                 </div>
+
             </div>
 
         </div>
-
-<div class="row ">
-
-    <div class="4u pagination-left">
-        <section>
-            <header>
- &nbsp;             </header>
-        </section>
-    </div>
-
-    <div class="4u pagination-middle">
-        <section>
-            <header>Page 1 / 1</header>
-        </section>
-    </div>
-
-    <div class="4u pagination-right">
-        <section>
-            <header>
-            </header>
-        </section>
-    </div>
-
-</div>
-
     </section>
-
-    <!-- Two -->
-<section class="wrapper style1 container special">
-    <h3>Recent Posts</h3>
-    <div class="row">
-        <div class="4u">
-
-            <section>
-                <span class="icon feature fa-frown-o"></span>
-                <header>
-                    <a href="/posts/not-today" rel='bookmark'>
-                        <h3>Not Today</h3>
-                    </a>
-                </header>
-                <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="/posts/not-today" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-    </div>
-</section>
 </article>
+
 <!-- CTA -->
 <section id="cta">
 
