--- a/archives4.html
+++ b/archives4.html
@@ -22,11 +22,11 @@
     <link href="https://fonts.googleapis.com/css?family=Anonymous+Pro:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie/v9.css" /><![endif]-->
-     <title>experiment | Pawanraj Sadhwani </title>
+     <title>Archives | Pawanraj Sadhwani </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"> </head>
 
-<body class="no-sidebar loading">
+<body class="right-sidebar loading">
 
 
 
@@ -70,8 +70,8 @@
 <article id="main">
 
     <header class="special container">
-        <span class="icon fa-tag"></span>
-        <h2><i class="fa fa-tag" aria-hidden="true"></i>experiment</h2>
+        <span class="icon fa-archive"></span>
+        <h2>Archives</h2>
         <!-- add page sub title here -->
     </header>
 
@@ -85,12 +85,48 @@
                     <section>
                         <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
                         <header>
-                            <a href="/posts/not-today">
-                                <h3>Not Today</h3>
+                            <a href="/posts/being-ok">
+                                <h3>Being OK</h3>
                             </a>
                         </header>
-                        <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly - but find only vague incoherent static. The tuning mechanism of your life-radio is broken …</p>
+                        <p>He was okay. He had been like that for a while. Sure, life could've been better. But it could've been worse. He counted his blessings and thought, he was okay. Comfortable. Content. Maybe even happy. And then he met her. He wasn't much for talking. Putting himself out there was …</p>
                     </section>
+                    <section>
+                        <!-- <a href="#" class="image feature"><img src="images/pic03.jpg" alt="" /></a> -->
+                        <header>
+                            <a href="/posts/jump">
+                                <h3>Jump!</h3>
+                            </a>
+                        </header>
+                        <p>Reflecting on my life the last few days, usually left me slightly saddened. It sometimes felt like God is in one of His moods and I'm the ant who is caught under His magnifying glass. The idea of a trip to Mandvi beach was therefore exciting (as all trips to …</p>
+                    </section>
+ 
+<div class="row ">
+
+    <div class="4u pagination-left">
+        <section>
+            <header>
+                     <a href="/archives3.html">
+                &larr;&nbsp;Newer posts</a>             </header>
+        </section>
+    </div>
+
+    <div class="4u pagination-middle">
+        <section>
+            <header>Page 4 / 4</header>
+        </section>
+    </div>
+
+    <div class="4u pagination-right">
+        <section>
+            <header>
+            </header>
+        </section>
+    </div>
+
+</div>
+
+
                 </div>
             </div>
 
@@ -239,61 +275,13 @@
                         </ul>
                     </section>
                 </div>
+
             </div>
 
         </div>
-
-<div class="row ">
-
-    <div class="4u pagination-left">
-        <section>
-            <header>
- &nbsp;             </header>
-        </section>
-    </div>
-
-    <div class="4u pagination-middle">
-        <section>
-            <header>Page 1 / 1</header>
-        </section>
-    </div>
-
-    <div class="4u pagination-right">
-        <section>
-            <header>
-            </header>
-        </section>
-    </div>
-
-</div>
-
     </section>
-
-    <!-- Two -->
-<section class="wrapper style1 container special">
-    <h3>Recent Posts</h3>
-    <div class="row">
-        <div class="4u">
-
-            <section>
-                <span class="icon feature fa-frown-o"></span>
-                <header>
-                    <a href="/posts/not-today" rel='bookmark'>
-                        <h3>Not Today</h3>
-                    </a>
-                </header>
-                <p>Something is troubling you. You do not know what it is. You cannot pinpoint it. You try to turn the dial to bring into sharp focus the spectrum of emotions so you can hear them clearly -</p>
-                <footer>
-                    <ul class="buttons">
-                        <li><a href="/posts/not-today" class="button small">Read More</a></li>
-                    </ul>
-                </footer>
-            </section>
-
-        </div>
-    </div>
-</section>
 </article>
+
 <!-- CTA -->
 <section id="cta">
 
