--- a/index2.html
+++ b/index2.html
@@ -67,8 +67,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -117,19 +117,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>Book Review: The Source by James A. Michener</strong></h2>
+                <h2>Featured - <strong>This way and That...</strong></h2>
             </header>
-            <p>&lt;a href=&#34;http://www.goodreads.com/book/show/</p>
+            <p>So, imagine this. You&#39;re walking on this road. Just you. All alone. You cannot turn back. You cannot sit down. You have nowhere else to go. You have nowhere to turn. And so, you must walk the direc</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/book-review-the-source-james-michener" class="button">Read More</a></li>
+                    <li><a href="/posts/this-way-and-that" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-book"><span class="label">Book Review: The Source by James A. Michener</span></span>
+                <li><span class="icon fa-arrows-h"><span class="label">This way and That...</span></span>
                 </li>
             </ul>
         </div>
@@ -206,9 +206,8 @@
     <div class="4u pagination-left">
         <section>
             <header>
-                    <a href="/index.html">
-                &larr;&nbsp;Newer posts</a>
-            </header>
+                 <a href="/index.html">
+                &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
 
@@ -221,8 +220,7 @@
     <div class="4u pagination-right">
         <section>
             <header>
-                <a href="/index3.html">Older posts&nbsp;&rarr;</a>
-            </header>
+                <a href="/index3.html">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -243,25 +241,24 @@
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Look at my work</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
 </section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
