--- a/index4.html
+++ b/index4.html
@@ -67,8 +67,8 @@
         <nav id="nav">
             <ul>
                 <!-- <li class="current"><a href="index.html">Welcome</a></li> -->
-                <li><a href="archives">Archives</a></li>
-                <li><a href="tags">Tags</a></li>
+                <li><a href="/archives">Archives</a></li>
+                <li><a href="/tags">Tags</a></li>
                 <li class="submenu">
                     <a href="/">Blog</a>
                     <ul>
@@ -117,19 +117,19 @@
         <div class="9u">
 
             <header>
-                <h2>Featured - <strong>I Want to Talk to You...</strong></h2>
+                <h2>Featured - <strong>Growing up.</strong></h2>
             </header>
-            <p>I want to talk to you. But I can&#39;t. I can&#39;t. And I watch in despair, as I shout, I scream... I say the words that you cannot hear. I despair as I see two steady streams - of words - o</p>
+            <p>It&#39;s been an interesting three months... My folks came to visit me, here in the States. While my father had been to the USA before, it was a first for mom. I saw them after a year, so that w</p>
             <footer>
                 <ul class="buttons">
-                    <li><a href="/posts/i-want-to-talk-to-you" class="button">Read More</a></li>
+                    <li><a href="/posts/growing-up" class="button">Read More</a></li>
                 </ul>
             </footer>
 
         </div>
         <div class="3u skel-cell-important">
             <ul class="feature-icons">
-                <li><span class="icon fa-pencil"><span class="label">I Want to Talk to You...</span></span>
+                <li><span class="icon fa-smile-o"><span class="label">Growing up.</span></span>
                 </li>
             </ul>
         </div>
@@ -206,9 +206,8 @@
     <div class="4u pagination-left">
         <section>
             <header>
-                    <a href="/index3.html">
-                &larr;&nbsp;Newer posts</a>
-            </header>
+                     <a href="/index3.html">
+                &larr;&nbsp;Newer posts</a>             </header>
         </section>
     </div>
 
@@ -221,8 +220,7 @@
     <div class="4u pagination-right">
         <section>
             <header>
-                <a href="/index5.html">Older posts&nbsp;&rarr;</a>
-            </header>
+                <a href="/index5.html">Older posts&nbsp;&rarr;</a>             </header>
         </section>
     </div>
 
@@ -243,25 +241,24 @@
     <footer>
         <ul class="buttons">
             <li><a href="mailto:pawanraj@gmail.com" class="button special">Email Me!</a></li>
-            <li><a href="/docs/pgs_resume.pdf" class="button">Look at my work</a></li>
+            <li><a href="/docs/pgs_resume.pdf" class="button">Resume</a></li>
         </ul>
     </footer>
 
 </section>  <!-- Footer -->
 <footer id="footer">
 
-    <ul class="icons">
-        <li>
-            <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
-        </li>
-        <li>
-            <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
-        </li>
-    </ul>
-
+<ul class="icons">
+    <li>
+        <a href="https://twitter.com/pawanrajs" class="icon circle fa fa-twitter"><span class="label">twitter</span></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/pawanrajs/" class="icon circle fa fa-linkedin"><span class="label">linkedin</span></a>
+    </li>
+    <li>
+        <a href="mailto:pawanraj@gmail.com" class="icon circle fa fa-envelope"><span class="label">envelope</span></a>
+    </li>
+</ul>
     <span class="copyright">&copy; Pawanraj Sadhwani. All rights reserved. <br>
       Design: Inspired by <a href="https://html5up.net/twenty">Twenty</a>, by <a href="http://html5up.net">HTML5 UP</a>.</span>
 
